[dependencies]
async-stream = "0.3.6"
binrw = "0.15.0"
chrono = "0.4.41"
clap = "4.5.39"
crossbeam = "0.8.4"
ctrlc = "3.4.7"
egui = "0.31.1"
egui-plotter = "0.4.0"
futures-util = "0.3.31"
image = "0.24.9" #has to pin to 0.24.9 required by plotters
minifb = "0.28.0"
num = "0.4.3"
rayon = "1.10.0"
signalbool = "0.2.5"
soapysdr = "0.4.1"
systemstat = "0.2.4"
tinystr = "0.8.1"

[dependencies.bitmap]
default-features = false
version = "3.1.3"

[dependencies.eframe]
features = ["wgpu"]
version = "0.31.1"

[dependencies.ndarray]
features = ["rayon"]
version = "0.16.1"

[dependencies.plotters]
default-features = false
features = [
    "svg_backend",
    "ttf",
    "datetime",
    "errorbar",
    "candlestick",
    "boxplot",
    "area_series",
    "line_series",
    "histogram",
    "point_series",
    "evcxr",
]
version = "0.3.7"

[dependencies.rsdsp]
path = "../rsdsp"

[dependencies.tokio]
features = ["full"]
version = "1.45.1"

[package]
edition = "2021"
name = "soapy_spec_acc"
version = "0.1.0"
